@startuml Weapon
entity WeaponCategory {
    Id: Guid <<PK>>
    GameSystemId: Guid <<FK>>
    Name: varchar 30
}

entity WeaponType {
    Id: Guid <<PK>>
    GameSystemId: Guid <<FK>>
    Name: varchar 30
}

entity WeaponProperty {
    Id: Guid <<PK>>
    GameSystemId: Guid <<FK>>
    Name: varchar 30
    Description: text
    AltersDamage: bit
    ' RequiresAlternativeDamage: bit
    ' AllowsAttributeOverride: bit
    HasAlternativeDiceTypeDamage: bit
    AllowsAttributeOverride: bit
}

entity Weapon {
    Id: Guid <<PK>>
    GameSystemId: Guid <<FK>>
    WeaponCategoryId: Guid <<FK>>
    WeaponTypeId: Guid <<FK>> null
    BaseAbilityScoreId: Guid <<FK>>
    AlternativeAbilityScoreId: Guid <<FK>> null
    Name: varchar 50
    Description: text null
    Price: decimal(10,2)
    Weight: float
    RangeNormal: int null
    RangeLong: int null
}

entity DamageType {
    Id: Guid <<PK>>
    Name: varchar 30
}

entity WeaponDamage {
    WeaponId: Guid <<PK>> <<FK>>
    DamageTypeId: <<PK>> <<FK>>
    AttackIncrease: int null
    DamageDieCount: int null
    DamageDieType: int null
    AlternativeDamageDieCount: int null
    AlternativeDamageDieType: int null
    DamageIncrease: int null
}

entity WeaponProperties {
    WeaponId: Guid <<PK>> <<FK>>
    WeaponPropertyId: Guid <<PK>> <<FK>>
}

GameSystem -- WeaponCategory
GameSystem -- WeaponGroup
GameSystem -- Weapon
GameSystem -- WeaponProperty

WeaponCategory -- Weapon
WeaponGroup -- Weapon

Weapon -- WeaponProperties
WeaponProperty -- WeaponProperties

Weapon -- WeaponDamage
DamageType -- WeaponDamage
@enduml
